--- a/styles.css
+++ b/styles.css
@@ -1,110 +1,168 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
-:root{
-    --border-color: #e3e5e4;
-    --background-color: #c3c7ca;
-    --text-color: #34444f;
+:root {
+	--border-color: #e3e5e4;
+	--background-color: #c3c7ca;
+	--text-color: #34444f;
 }
 
-
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
 
+.container {
+	margin-bottom: 5em;
+}
 
 body {
-    background-color: #fff;
-    display:flex;
-    flex-direction: column;
-    align-items: center;  
-    justify-content: flex-start;
-    height: 100vh;
-    margin: 0;
-    font-family: "Lato", sans-serif;
+	background-color: #fff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	margin: 0;
+	font-family: 'Lato', sans-serif;
 }
 
-
-.draggable-list{
-    border: 1px solid var(--border-color);
-    color: var(--text-color);
-    padding: 0;
-    list-style-type: none;
+.draggable-list {
+	border: 1px solid var(--border-color);
+	color: var(--text-color);
+	padding: 0;
+	list-style-type: none;
 }
 
-#demo{
-    border: 1px solid var(--border-color);
-    color: var(--text-color);
-    padding: 0;
-    list-style-type: none;
+#demo {
+	border: 1px solid var(--border-color);
+	color: var(--text-color);
+	padding: 0;
+	list-style-type: none;
 }
 
-.draggable-list li{
-    background-color: #fff;
-    display: flex;
-    flex: 1;
+.draggable-list li {
+	background-color: #fff;
+	display: flex;
+	flex: 1;
 }
 
-#demo li{
-    background-color: #fff;
-    display: flex;
-    flex: 1; 
+#demo li {
+	background-color: #fff;
+	display: flex;
+	flex: 1;
 }
-.draggable-list li:not(:last-of-type){
-    border-bottom: 1px solid var(--border-color);
-}
-
-.draggable-list .number{
-    background-color: var(--background-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 28px;
-    height: 60px;
-    width: 60px;
+.draggable-list li:not(:last-of-type) {
+	border-bottom: 1px solid var(--border-color);
 }
 
-.draggable-list li.over .draggable{
-    background-color: #eaeaea;
+.draggable-list .number {
+	background-color: var(--background-color);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 28px;
+	height: 60px;
+	width: 60px;
 }
 
-.draggable-list .person-name{
-    font-size: 15px;
-    
-    margin: 0 20px 0 0;
+.draggable-list li.over .draggable {
+	background-color: #eaeaea;
 }
 
+.draggable-list .person-name {
+	font-size: 15px;
 
-.draggable-list li.right .person-name{
-    color: #3ae374;
+	margin: 0 20px 0 0;
 }
 
-.draggable-list li.wrong .person-name{
-    color: #ff3838;
+.draggable-list li.right .person-name {
+	color: #3ae374;
 }
 
-
-.draggable{
-    cursor:  pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-    flex: 1;
+.draggable-list li.wrong .person-name {
+	color: #ff3838;
 }
 
-.check-btn{
-    background-color: var(--background-color);
-    border: none;
-    color: var(--text-color);
-    font-size: 16px;
-    padding: 10px 20px;
-    cursor: pointer;
+.draggable {
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 15px;
+	flex: 1;
 }
 
-.check-btn:active{
-    transform: scale(0.9);
+.check-btn {
+	background-color: var(--background-color);
+	border: none;
+	color: var(--text-color);
+	font-size: 16px;
+	padding: 10px 20px;
+	cursor: pointer;
 }
 
-.check-btn:focus{
-    outline: none;
+.check-btn:active {
+	transform: scale(0.9);
+}
+
+.check-btn:focus {
+	outline: none;
+}
+
+/*******************************/
+/* drop drop btns styles */
+.order-drop-list {
+	font-family: Arial;
+	display: flex;
+}
+
+/* Links inside the navbar */
+.order-drop-list .btn {
+	float: left;
+	font-size: 16px;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content .btn {
+	color: black;
+	display: block;
+	padding: 0.2em;
+	height: 100%;
+	background: var(--background-color);
+	border: none;
+	outline: none;
+}
+
+.dropdown-content .btn:hover {
+	background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.btns {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	gap: 1em;
+}
+
+.dropbtn {
+	height: 100%;
+	padding: 0 1em;
+	font-size: 1em;
+	background: var(--background-color);
+	border: none;
+	outline: none;
 }
