--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,6 @@ body {
 	display: none;
 	position: absolute;
 	background-color: #f9f9f9;
-	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
 }
@@ -137,7 +136,6 @@ body {
 	color: black;
 	display: block;
 	padding: 0.2em;
-	height: 100%;
 	background: var(--background-color);
 	border: none;
 	outline: none;
@@ -148,7 +146,10 @@ body {
 }
 
 .dropdown:hover .dropdown-content {
-	display: block;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	font-size: 1em;
 }
 
 .btns {
@@ -165,4 +166,11 @@ body {
 	background: var(--background-color);
 	border: none;
 	outline: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.fa-caret-down {
+	margin-left: 0.4em;
 }
